--- a/Resources/Private/Templates/Tag/List.html
+++ b/Resources/Private/Templates/Tag/List.html
@@ -3,15 +3,13 @@
 <f:section name="main">
 
 <f:if condition="{tags}">
-	<div class="tx_statictagcloud">
-		<ul>
-			<f:for each="{tags}" as="tag">
-				<li class="priority-{tag.priority}">
-					<f:link.page pageUid="{tag.link}">{tag.tag}</f:link.page>
-				</li>
-			</f:for>
-		</ul>
-	</div>
+	<ul class="no-bullets">
+		<f:for each="{tags}" as="tag">
+			<li class="priority-{tag.priority}">
+				<f:link.page pageUid="{tag.link}">{tag.tag}</f:link.page>
+			</li>
+		</f:for>
+	</ul>
 </f:if>
 
 </f:section>
